--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,13 @@ top: 50px;
   width:50%;
   margin-right:30px;
   border-radius: 20px;
+
+}
+.project-image-right:hover,.project-image-left:hover
+{
+  box-shadow: 10px 10px 10px  grey;
+  transform:translate(2px,10px);
+  transition: 1s;
 }
 .project-image-right
 {
@@ -170,3 +177,4 @@ padding-top: 50px;
   right:210px;
   color:white;
 }
+
